# mathmechcpp

./: .gitignore
templates/: 01_int_array.cpp  02_float_array.cpp  03_macros_array.cpp  04_template_array.cpp  05_we_need_to_go_deeper.cpp  06_function_template.cpp  07_comparators.cpp  08_bool_array.cpp  09_bool_array_second.cpp  10_overloading.cpp  11_same_type.cpp  12_not_typename.cpp  13_templates_in_templates.cpp  14_compile_time.cpp  15_int_list.cpp  16_int_list_length.cpp  17_int_list_operations.cpp  18_int_list_zip.cpp  19_get_size.cpp  20_hashable.cpp  CMakeLists.txt
ub/: 1.cpp  10.cpp  11.cpp  12.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt
