cmake_minimum_required(VERSION 3.15)
project(templates)

set(CMAKE_CXX_STANDARD 20)

add_executable(01_int_array 01_int_array.cpp)
add_executable(02_float_array 02_float_array.cpp)
add_executable(03_macros_array 03_macros_array.cpp)
add_executable(04_template_array 04_template_array.cpp)
add_executable(05_we_need_to_go_deeper 05_we_need_to_go_deeper.cpp)
add_executable(06_function_template 06_function_template.cpp)
add_executable(07_comparators 07_comparators.cpp)
add_executable(08_bool_array 08_bool_array.cpp)
add_executable(09_bool_array_second 09_bool_array_second.cpp)
add_executable(10_overloading 10_overloading.cpp)
add_executable(11_same_type 11_same_type.cpp)
add_executable(12_not_typename 12_not_typename.cpp)
add_executable(13_templates_in_templates 13_templates_in_templates.cpp)
add_executable(14_compile_time 14_compile_time.cpp)
add_executable(15_int_list 15_int_list.cpp)
add_executable(16_int_list_length 16_int_list_length.cpp)
add_executable(17_int_list_operations 17_int_list_operations.cpp)
add_executable(18_int_list_zip 18_int_list_zip.cpp)
add_executable(19_get_size 19_get_size.cpp)
add_executable(20_hashable 20_hashable.cpp)



