cmake_minimum_required(VERSION 3.15)
project(ub)

set(CMAKE_CXX_STANDARD 17)

add_compile_options(-O2)

add_executable(example_01 1.cpp)
add_executable(example_02 2.cpp)
add_executable(example_03 3.cpp)
add_executable(example_04 4.cpp)
add_executable(example_05 5.cpp)
add_executable(example_06 6.cpp)
add_executable(example_07 7.cpp)
add_executable(example_08 8.cpp)
add_executable(example_09 9.cpp)
add_executable(example_10 10.cpp)
add_executable(example_11 11.cpp)
add_executable(example_12 12.cpp)